//
// Copyright 2019 Asylo authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto2";

package examples.secure_grpc;

import "asylo/enclave.proto";
import "asylo/identity/platform/sgx/sgx_identity.proto";

extend asylo.EnclaveConfig {
  // An SGX identity expectation to enforce as the ACL in the Translator
  // server. Required.
  optional asylo.SgxIdentityExpectation identity_expectation = 264217773;
}

extend asylo.EnclaveOutput {
  // The Translator server's port.
  optional int32 server_port = 264217773;
}
